styles/styles.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
}

header {
    color: white;
    text-align: center;
    padding: 10px 0;
    position: relative;
}

.logo-container {
    width: 100%;
    text-align: center;
    margin: 10px 0;
}

.logo {
    width: 400px;
}

.main-text {
  max-width: 600px;
  text-align: left;
  margin: 0 auto;
}

.speakers {
}

.speaker-text {
  max-width: 600px;
  text-align: left;
  margin: 0 auto;
}

.hamburger-menu {
    display: none;
    font-size: 1.5em;
    font-color: black;
    color: black;
    cursor: pointer;
}

.navbar-container {
    border-top: 5px solid darkgreen;
    padding-top: 20px;
}

.language-selector {
    margin-right: 20px;
}

.top-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 20px;
}

.language-flag {
  width: 20px;
}

nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
}

nav ul li {
    margin: 0 15px;
}

nav ul li a {
    color: black;
    text-decoration: none;
    font-size: 1.2em;
}

nav ul li a:hover {
    text-decoration: underline;
	color: green;
}

nav ul li .dropdown-content {
    display: none;
    position: absolute;
    background-color: #333;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

nav ul li .dropdown-content a {
    color: white;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

nav ul li .dropdown-content a:hover {
    background-color: darkgreen;
}

nav ul li:hover .dropdown-content {
    display: block;
}

main {
    padding: 20px;
    text-align: center;
  padding-bottom: 70px;
}

footer {
    background-color: #333;
    color: white;
    text-align: center;
    padding: 10px 0;
    position: fixed;
    width: 100%;
    bottom: 0;
}

.schedule-container {
    max-width: 800px;
    margin: 0 auto;
    text-align: left;
}

.schedule-container h2 {
    text-align: center;
    margin-bottom: 20px;
}

.day-schedule {
    margin-bottom: 40px;
}

.day-schedule h3 {
    background-color: darkgreen;
    color: white;
    padding: 10px;
    margin: 0 -20px;
}

.category {
    margin-bottom: 40px;
}

.category h3 {
    background-color: darkgreen;
    color: white;
    padding: 10px;
    margin: 0 -20px;
}

.video {
    margin: 20px 0;
}

table {
    width: 100%;
    border-collapse: collapse;
}

table th, table td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: left;
}

table th {
    background-color: #f2f2f2;
}

.speaker-bio {
    display: flex;
    max-width: 600px;
    margin: 20px auto;
    padding: 20px;
    border: 1px solid #ddd;
    border-radius: 10px;
    background-color: #f9f9f9;
}

.bio-image {
    flex: 1;
    margin-right: 20px;
}

.bio-image img {
    max-width: 100%;
    border-radius: 10px;
}

.bio-text {
    flex: 2;
    text-align: right;
}

.bio-text h2 {
    color: darkgreen;
    margin-bottom: 10px;
}

.bio-text p {
    margin-bottom: 10px;
}

@media (max-width: 768px) {
    .logo {
      width: 90%;
  }
    .hamburger-menu {
        display: block;
    }
    .navbar-container {
        display: none;
    }
    nav ul {
        flex-direction: column;
        text-align: center;
    }
    nav ul li {
        margin: 10px 0;
    }
  .day-schedule h3 {
        margin: 0;
    }
  .category h3 {
        margin: 0;
    }
  .speaker-bio {
        flex-direction: column;
        text-align: center;
    }
    .bio-image {
        margin-right: 0;
        margin-bottom: 20px;
    }
    .bio-text {
        text-align: left;
    }
}

